<resources>
    <string name="app_name">Curis</string>
    <string name="google_key">AIzaSyBVp__sJ_TvzCxpNxaPds44LlNkwnNyYMk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="preferred_hospital">Preferred Hospital</string>
    <string name="preferred_hospital_address">Preferred Hospital Address</string>
    <string name="different_locale"><u>input a different location</u></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pending_fragment">Pending Fragment</string>
    <string name="proceed">Proceed</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="no_account_yet_sign_up">No account yet? Sign Up</string>
    <string name="continue_using_curis">Continue using Curis</string>
    <string name="settings">Settings</string>
    <string name="next_of_kin">Next Of Kin</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="an_ambulance_is_needed">An Ambulance is needed</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="destination">Destination:</string>
</resources>
