<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:scrollbars="vertical"
    android:background="@drawable/bg_pattern_white"
    tools:context="me.goodnesskayode.curis.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@android:color/white"
            android:background="?attr/colorPrimary"
            android:fitsSystemWindows="true">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_gravity="center"
                />

        </android.support.v7.widget.Toolbar>

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Full Name"
            android:layout_marginTop="@dimen/margin_top"
            android:padding="@dimen/padding"
            android:inputType="text"/>

        <EditText
            android:id="@+id/input_preferred_hospital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/preferred_hospital"
            android:inputType="textAutoComplete"
            android:padding="@dimen/padding"
            />

        <EditText
            android:id="@+id/input_preferred_hospital_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/preferred_hospital_address"
            android:inputType="textMultiLine"
            android:padding="@dimen/padding"
            />

        <EditText
            android:id="@+id/input_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:padding="@dimen/padding"
            android:inputType="text"/>

        <EditText
            android:id="@+id/input_next_of_kin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/next_of_kin"
            android:padding="@dimen/padding"
            android:inputType="text"/>

        <EditText
            android:id="@+id/input_next_of_kin_mobile_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Next Of Kin Mobile Number"
            android:padding="@dimen/padding"
            android:inputType="text"/>


        <EditText
            android:id="@+id/input_work_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:hint="Work Address"
            android:inputType="textMultiLine"/>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_button"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:minWidth="300dp"
            android:layout_marginTop="10dp"
            android:text="Save"/>

    </LinearLayout>

</ScrollView>