<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorPrimary"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

       <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:src="@drawable/full_logo"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="@dimen/margin_bottom"
           android:padding="@dimen/padding"
        />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:paddingTop="@dimen/padding"
            android:layout_marginBottom="10dp"
            android:padding="@dimen/padding"
            />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:paddingTop="@dimen/padding"
            android:padding="@dimen/padding"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_button"
            android:text="@string/continue_using_curis"
            android:textColor="@color/white"
            android:minWidth="300dp"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="@dimen/margin_top"/>


        <TextView
            android:id="@+id/link_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_account_yet_sign_up"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="18dp"
            android:layout_marginTop="@dimen/margin_top"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/splash_below"
                android:layout_alignParentBottom="true"
                android:adjustViewBounds="true"/>
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>